d3d11videosink: full screen video on second display reduces video size
Describe your issue
d3d11videosink: streaming a video on a second display, with the window maximized and then entering fullscreen mode (with ALT+ENTER) reduces the video size.
Expected Behavior
The video is shown in full screen.
Observed Behavior
The video is really small or inexistant.
Setup
- Operating System: Windows 11
- Device: Computer, 2 screens
- GStreamer Version: 1.22
-
Command line:
gst-launch-1.0.exe videotestsrc ! queue ! d3d11videosink fullscreen-toggle-mode=0x02
Steps to reproduce the bug
- open terminal
- type
gst-launch-1.0.exe videotestsrc ! queue ! d3d11videosink fullscreen-toggle-mode=0x02
- slide the stream window on the second screen
- maximize the stream window
- press ALT+ENTER
How reproducible is the bug?
The fullscreen always reduce, 100% reproducible.
Screenshots if relevant
Solutions you have tried
Related non-duplicate issues
Additional Information
This issue also appears with the version 1.21 of Gstreamer